# mitch

./: .ghcid  .travis.yml  Cidr.hs  Main.hs  cabal.project  install  install.sh  mitch.cabal
init-haskell-project/: Main.hs  Shake.hs  Shakefile  cabal  cabal.dhall  cabal.project  default-extensions  ghc-options  shakefile.cabal  shakefile.cabal.dhall
