cabal-version: 2.0

name: mitch
version: 0
build-type: Simple
tested-with: GHC == 8.4.2

executable mitch
  main-is: Main.hs
  other-modules:
    Cidr
  ghc-options: -Wall -O
  default-language: Haskell2010
  default-extensions:
      LambdaCase
    , NamedFieldPuns
    , NoImplicitPrelude
    , OverloadedStrings
    , ViewPatterns

  build-depends:
      lens
    , mitchell-stdlib
