cabal-version: 2.0

name: mitch
version: 0
build-type: Simple
tested-with: GHC == 8.4.2

executable mitch
  build-depends:
      file-embed
    , lens
    , planet-mitchell == 0.0.0
    , unix
  default-language: Haskell2010
  default-extensions:
      LambdaCase
    , NamedFieldPuns
    , NoImplicitPrelude
    , OverloadedStrings
    , ScopedTypeVariables
    , ViewPatterns
  ghc-options: -Wall -O
  main-is: Main.hs
  other-modules:
    Cidr
